azure_scripts/client.yaml

# Client deployment and configs

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client-dp
  name: client
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - image: inviteacr.azurecr.io/inviteapp/ivt-client:1
        name: client
        imagePullPolicy: IfNotPresent
        ports:
         - containerPort: 3000
        resources:
          requests:
            cpu: 60m
            memory: 300Mi
          limits:
            cpu: 75m
            memory: 400Mi
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          failureThreshold: 20
          initialDelaySeconds: 5
          periodSeconds: 5
