azure_scripts/server.yaml
# Server deployment, configMaps and secrets

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server-dp
  name: server
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - image: inviteacr.azurecr.io/inviteapp/ivt-server:1
        name: server
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3003
        volumeMounts:
        - name: secret-volume
          mountPath: /etc/secrets
        - name: mongo-secret-volume
          mountPath: /etc/mongosecrets
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          limits:
            cpu: 75m
            memory: 128Mi 
        startupProbe:
          httpGet:
            path: /api
            port: 3003
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /api
            port: 3003
          failureThreshold: 3
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /api
            port: 3003
          failureThreshold: 5
          initialDelaySeconds: 3
          periodSeconds: 3
      volumes:
      - name: secret-volume
        secret:
          secretName: server-secret  
      - name: mongo-secret-volume
        secret:
          secretName: mongo-secret
