azure_scripts/azrdeployment.yaml
# Services for the three microservices #

# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
# server
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server-svc
  namespace: ingress-nginx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3003
  selector:
    app: server
  type: ClusterIP

---

# developer
apiVersion: v1
kind: Service
metadata:
  labels:
    app: developer
  name: dev-svc
  namespace: ingress-nginx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: developer
  type: ClusterIP

---

# client
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client-svc
  namespace: ingress-nginx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: client
  type: ClusterIP
