azure_scripts/azingress.yaml
# Ingress for three microservices #

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivt-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myeventson.online
    secretName: tls-secret
  rules:
  - host: myeventson.online
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-svc
            port:
              number: 80
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: dev-svc
            port:
              number: 80
